--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Склонение по падежам</title>
   </head>
   <body>
     <noscript>Вам необходимо включить в своем браузере JavaScript чтобы пользоваться данным приложением.</noscript>
